--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,11 +1,24 @@
 @use './_variables' as *;
 @use './_mixins' as mixins-collection;
 
+body {
+    background-image: url('../img/background-min.jpg');
+    background-size: cover;
+    margin: 0;
+}
+
 .b-app {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 240, 232, 0.5);
     font-family: $arial-family;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__greetings-message {
+        margin-top: 5%;
+    }
 
     &__user-name {
         margin-top: 10px;
